--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
         targetSdkVersion 34
         versionCode 18
         versionName "1.4.5"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         javaCompileOptions {
             annotationProcessorOptions {
@@ -88,6 +89,10 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.5.1"
+
 
     def room_version = "2.5.2"
 
