--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
+
     <application
         android:name="NotesApplication"
         android:allowBackup="true"
@@ -77,6 +78,7 @@
             android:parentActivityName=".ui.main.MainActivity" />
         <activity
             android:name=".ui.TutorialActivity"
+            android:exported="true"
             android:label="@string/title_tutorial"
             android:parentActivityName=".ui.main.MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
